--- a/src/ui/components/system/MediaPlayer.pug
+++ b/src/ui/components/system/MediaPlayer.pug
@@ -1,6 +1,8 @@
 script.
+	import Button from './Button.pug'
 	import { onMount } from 'svelte'
 	export audio_url = null
+	export video_aspect_ratio = 1
 	export video_url = null
 	stati = {
 		LOADING: 'LOADING...'
@@ -29,14 +31,9 @@ script.
 		video.addEventListener('waiting', (e) ->
 			audio.pause()
 		)
-	onMousedown = (e) ->
+	handleMousedown = (e) ->
 		if e.button is 0
 			if video.paused then video.play() else video.pause()
-		else if e.button is 2 and not e.altKey
-			if document.fullscreenElement
-				document.exitFullscreen()
-			else
-				video.requestFullscreen()
 		wakeMouse()
 	wakeMouse = ->
 		mouseIdle = false
@@ -46,10 +43,16 @@ script.
 			200
 		)
 
-video(bind:buffered={buffered} bind:duration={duration} bind:currentTime={time} bind:this={video} on:contextmenu={e => e.altKey || e.preventDefault()} on:mousedown={onMousedown} on:mousemove={() => wakeMouse()} style="cursor:{document.fullscreenElement && document.fullscreenElement === video && mouseIdle ? 'none' : 'auto'}")
+video(bind:buffered={buffered} bind:duration={duration} bind:currentTime={time} bind:this={video} on:contextmenu={e => e.altKey || e.preventDefault()} on:mousedown={handleMousedown} on:mousemove={() => wakeMouse()} style="aspect-ratio: {video_aspect_ratio}; cursor: {document.fullscreenElement && document.fullscreenElement === video && mouseIdle ? 'none' : 'auto'}")
 	source(src={video_url} type='video/mp4')
 audio(bind:this={audio})
 	source(src={audio_url} type='audio/mp4')
+.video-actions
+	Button(action={() => video.paused && video.play()} key='e' text='Play')
+	Button(action={() => !video.paused && video.pause()} key='s' text='Pause')
+	Button(action={() => time = Math.max(0, time - 3)} key='r' text='Rewind 3sec')
+	Button(action={() => time = Math.min(duration, time + 3)} key='shift r' text='Forward 3sec')
+	Button(action={() => video.requestFullscreen()} key='f' text='Fullscreen')
 nav.video-controls
 	.media-playback-container
 		span.media-status {status}
@@ -64,7 +67,6 @@ nav.video-controls
 		.media-time-info
 			time.media-elapsed-duration {time.toFixed(2)}
 			time.media-total-duration {duration.toFixed(2)}
-		button.video-fullscreen-button(on:mousedown={() => video.requestFullscreen()}) FS
 
 style.
 	::-webkit-media-controls
@@ -78,12 +80,16 @@ style.
 		background lightgray
 		height 10px
 		position absolute
+	.video-actions
+		display flex
+		gap 1em
+		margin-top 1em
 	.video-controls
 		border 1px solid
 		border-radius 5px
 		box-sizing border-box
 		padding 0 10px
-		width 100%
+		width 480px
 	.video-controls-second-row
 		display flex
 		justify-content space-between
@@ -148,6 +154,6 @@ style.
 		display none
 	video
 		background black
+		border-radius 6px
 		display block
 		height 360px
-		width 640px
