post: work on layout

--- a/src/ui/components/content/Headline.pug
+++ b/src/ui/components/content/Headline.pug
@@ -20,6 +20,7 @@ script.
 style.
 	.headline
 		box-sizing border-box
+		overflow-wrap anywhere
 		padding 2ch
 		&.selected
 			background rgba(0,0,0,0.1)
