post: work on layout

--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -43,6 +43,7 @@ style.
 		gap 1ch
 		position relative
 	.comment-body
+		max-width 450px
 		overflow-wrap anywhere
 	:global(.comment-body img)
 		border-radius 4px
