--- a/src/ui/components/content/Post.pug
+++ b/src/ui/components/content/Post.pug
@@ -57,10 +57,10 @@ script.
 							a(href={media.gif_url || media.image_url} rel='external noopener preconnect' target='_blank')
 								picture
 									{#if media.gif_url}
-										img.post-image(src={media.gif_url} style="max-width: 640px")
+										img.post-image(src={media.gif_url} style="aspect-ratio: {media.aspect_ratio}; height: {media.aspect_ratio < 1 ? '480px' : 'auto'}; width: {media.aspect_ratio < 1 ? 'auto' : '480px'}")
 									{:else if media.image_url}
 										source(srcset={media.image_url_640})
-										img.post-image(src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: 640px")
+										img.post-image(src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; height: {media.aspect_ratio < 1 ? '480px' : 'auto'}; width: {media.aspect_ratio < 1 ? 'auto' : '480px'}")
 							{#if media.caption_text || media.caption_url}
 								figcaption.post-image-caption
 									{#if media.caption_text}
@@ -76,7 +76,7 @@ script.
 							button(on:click={() => galleryIndex = index})
 								picture
 									source(srcset={media.image_url_108})
-									img.post-additional-image-thumbnail(class:post-additional-image-thumbnail-selected={galleryIndex === index} src={media.image_url} style="aspect-ratio: {media.aspect_ratio}")
+									img.post-additional-image-thumbnail(class:post-additional-image-thumbnail-selected={galleryIndex === index} src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; height: {media.aspect_ratio < 1 ? '36px' : 'auto'}; width: {media.aspect_ratio < 1 ? 'auto' : '36px'}")
 						Button(action={() => galleryIndex = Math.max(0, galleryIndex - 1)} key='t' text='↑')
 						Button(action={() => galleryIndex = Math.min(post.media.length - 1, galleryIndex + 1)} key='g' text='↓')
 			{:else if post.format === 'embed'}
@@ -123,23 +123,25 @@ style.
 		margin-top 2em
 		position relative
 		overflow-wrap anywhere
+		width 480px
 	.post-header
 		padding 2em 0
-		width 640px
+		width 480px
 	.post-iframe-actions
 		display flex
 		gap 1em
 		margin-top 1em
 	.post-image
 		cursor zoom-in
+		width 480px
 	.post-image-actions
 		display flex
 		gap 1em
 		margin-top 1em
 	.post-image-caption
 		font-size 12px
+		max-width 480px
 		padding 7px
-		width 640px
 	.post-info
 		display flex
 		margin-top 1em
@@ -150,7 +152,6 @@ style.
 		margin-top 1em
 	.post-replies
 		padding 2em 0
-		width 640px
 	.post-predictions
 		width 640px
 	.post-prediction-options > li
@@ -171,5 +172,5 @@ style.
 		margin 0
 		overflow-wrap anywhere
 	iframe
-		aspect-ratio 16/9
-		height 360px
+		aspect-ratio 1
+		height 480px
