--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -25,8 +25,7 @@ hr
 	background currentColor
 	border 0
 	height 1px
-	margin 1.5em 0
-	width 20ch
+	margin 1em 0
 
 // Formatted text
 a
@@ -45,7 +44,7 @@ code
 	font inherit
 pre
 	display inline-block
-	font 12px consolas
+	font 12px 'roboto mono'
 	margin-top 0.66em
 	white-space pre-wrap
 
@@ -85,17 +84,17 @@ h5
 h6
 	font-size 1.16em
 	font-weight bold
-	margin-top 1.75em
+	margin-top 1em
 h1
 	font-size 1.33em
 
 // Tables
 table
 	border-collapse collapse
-	font 12px consolas
+	font-size 12px
+	line-height 15px
 	margin-top 0.5em
 	white-space pre-wrap
-	width 100%
 td
 th
 	padding 0
@@ -109,11 +108,17 @@ iframe
 	border 0
 	border-radius 6px
 img
+	background black
+	border-radius 6px
+	display block
+video
+	background black
 	border-radius 6px
 	display block
 
 // Interactive
 button
+	color inherit
 	border 0
 	cursor pointer
 	font inherit
@@ -123,9 +128,11 @@ button
 	word-spacing inherit
 input
 	border 0
+	color inherit
 	font inherit
 	letter-spacing inherit
 	line-height inherit
+	margin 0
 	padding 0
 	word-spacing inherit
 
